force-app/main/default/objects/Property_AVM__c/Property_AVM__c.object-meta.xml
<CustomObject>
    <description>Automated valuation model (AVM) is the name given to a service that can provide real estate property valuations using mathematical modelling combined with a database. Most AVMs calculate a property&apos;s value at a specific point in time by analyzing values of comparable properties.</description>
    <label>Property AVM</label>
    <nameField>
        <displayFormat>PAVM-{0000000}</displayFormat>
        <label>Property AVM Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Property AVMs</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>