force-app/main/default/objects/Property_AVM__c/fields/air_conditioning__c.field-meta.xml
<CustomField>
    <fullName>air_conditioning__c</fullName>
    <description>yes if home has air conditioning. no otherwise</description>
    <inlineHelpText>yes if home has air conditioning. no otherwise</inlineHelpText>
    <label>Air conditioning</label>
    <length>30</length>
    <type>Text</type>
</CustomField>