force-app/main/default/objects/Property_AVM__c/fields/all_incidents__c.field-meta.xml
<CustomField>
    <fullName>all_incidents__c</fullName>
    <description>Count of incidents in the category. Any crime incidents reported near the block that don’t fall into either the property or violent categories</description>
    <inlineHelpText>Count of incidents in the category. Any crime incidents reported near the block that don’t fall into either the property or violent categories</inlineHelpText>
    <label>All incidents</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>