force-app/main/default/objects/Property_AVM__c/fields/apn__c.field-meta.xml
<CustomField>
    <fullName>apn__c</fullName>
    <description>Assessor’s Parcel Number or Parcel Identification Number</description>
    <inlineHelpText>Assessor’s Parcel Number or Parcel Identification Number</inlineHelpText>
    <label>Assessment APN</label>
    <length>50</length>
    <type>Text</type>
</CustomField>