force-app/main/default/objects/Property_AVM__c/fields/assessment_year__c.field-meta.xml
<CustomField>
    <fullName>assessment_year__c</fullName>
    <description>Year the assessment was conducted</description>
    <inlineHelpText>Year the assessment was conducted</inlineHelpText>
    <label>Assessment year</label>
    <length>6</length>
    <type>Text</type>
</CustomField>