force-app/main/default/objects/Property_AVM__c/fields/attic__c.field-meta.xml
<CustomField>
    <fullName>attic__c</fullName>
    <defaultValue>false</defaultValue>
    <description>true if home has attic. false otherwise.</description>
    <inlineHelpText>true if home has attic. false otherwise.</inlineHelpText>
    <label>Attic</label>
    <type>Checkbox</type>
</CustomField>