force-app/main/default/objects/Property_AVM__c/fields/AVM_Address__c.field-meta.xml
<CustomField>
    <fullName>AVM_Address__c</fullName>
    <label>AVM Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>