force-app/main/default/objects/Property_AVM__c/fields/AVM_APN__c.field-meta.xml
<CustomField>
    <fullName>AVM_APN__c</fullName>
    <label>AVM APN</label>
    <length>255</length>
    <type>Text</type>
</CustomField>