force-app/main/default/objects/Property_AVM__c/fields/AVM_Baths__c.field-meta.xml
<CustomField>
    <fullName>AVM_Baths__c</fullName>
    <label>AVM Baths</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>