force-app/main/default/objects/Property_AVM__c/fields/AVM_C1_Image__c.field-meta.xml
<CustomField>
    <fullName>AVM_C1_Image__c</fullName>
    <label>AVM C1 Image</label>
    <type>Url</type>
</CustomField>