force-app/main/default/objects/Property_AVM__c/fields/AVM_C1_included_In_Calculation__c.field-meta.xml
<CustomField>
    <fullName>AVM_C1_included_In_Calculation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AVM C1 included In Calculation</label>
    <type>Checkbox</type>
</CustomField>