force-app/main/default/objects/Property_AVM__c/fields/AVM_C1_List_Price__c.field-meta.xml
<CustomField>
    <fullName>AVM_C1_List_Price__c</fullName>
    <label>AVM C1 List Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>