force-app/main/default/objects/Property_AVM__c/fields/AVM_C1_State__c.field-meta.xml
<CustomField>
    <fullName>AVM_C1_State__c</fullName>
    <label>AVM C1 State</label>
    <length>10</length>
    <type>Text</type>
</CustomField>