force-app/main/default/objects/Property_AVM__c/fields/AVM_C1_Units__c.field-meta.xml
<CustomField>
    <fullName>AVM_C1_Units__c</fullName>
    <label>AVM C1 Units</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>