force-app/main/default/objects/Property_AVM__c/fields/AVM_C1_Year_Built__c.field-meta.xml
<CustomField>
    <fullName>AVM_C1_Year_Built__c</fullName>
    <label>AVM C1 Year Built</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>