force-app/main/default/objects/Property_AVM__c/fields/AVM_C1_Zip__c.field-meta.xml
<CustomField>
    <fullName>AVM_C1_Zip__c</fullName>
    <label>AVM C1 Zip</label>
    <length>20</length>
    <type>Text</type>
</CustomField>