force-app/main/default/objects/Property_AVM__c/fields/AVM_C2_Address__c.field-meta.xml
<CustomField>
    <fullName>AVM_C2_Address__c</fullName>
    <label>AVM C2 Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>