force-app/main/default/objects/Property_AVM__c/fields/AVM_C2_Beds__c.field-meta.xml
<CustomField>
    <fullName>AVM_C2_Beds__c</fullName>
    <label>AVM C2 Beds</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>