force-app/main/default/objects/Property_AVM__c/fields/AVM_C2_List_Date__c.field-meta.xml
<CustomField>
    <fullName>AVM_C2_List_Date__c</fullName>
    <label>AVM C2 List Date</label>
    <type>Date</type>
</CustomField>