force-app/main/default/objects/Property_AVM__c/fields/AVM_C2_State__c.field-meta.xml
<CustomField>
    <fullName>AVM_C2_State__c</fullName>
    <label>AVM C2 State</label>
    <length>20</length>
    <type>Text</type>
</CustomField>