force-app/main/default/objects/Property_AVM__c/fields/AVM_C2_Year_Built__c.field-meta.xml
<CustomField>
    <fullName>AVM_C2_Year_Built__c</fullName>
    <label>AVM C2 Year Built</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>