force-app/main/default/objects/Property_AVM__c/fields/AVM_C3_Comp_Type__c.field-meta.xml
<CustomField>
    <fullName>AVM_C3_Comp_Type__c</fullName>
    <label>AVM C3 Comp Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>