force-app/main/default/objects/Property_AVM__c/fields/AVM_C3_Image__c.field-meta.xml
<CustomField>
    <fullName>AVM_C3_Image__c</fullName>
    <label>AVM C3 Image</label>
    <type>Url</type>
</CustomField>