force-app/main/default/objects/Property_AVM__c/fields/AVM_C3_Included_In_Calculation__c.field-meta.xml
<CustomField>
    <fullName>AVM_C3_Included_In_Calculation__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AVM C3 Included In Calculation</label>
    <type>Checkbox</type>
</CustomField>