force-app/main/default/objects/Property_AVM__c/fields/AVM_C3_Lot_Size__c.field-meta.xml
<CustomField>
    <fullName>AVM_C3_Lot_Size__c</fullName>
    <label>AVM C3 Lot Size</label>
    <length>255</length>
    <type>Text</type>
</CustomField>