force-app/main/default/objects/Property_AVM__c/fields/AVM_C3_Percentage_Of_Valuation__c.field-meta.xml
<CustomField>
    <fullName>AVM_C3_Percentage_Of_Valuation__c</fullName>
    <label>AVM C3 Percentage Of Valuation</label>
    <precision>18</precision>
    <scale>9</scale>
    <type>Number</type>
</CustomField>