force-app/main/default/objects/Property_AVM__c/fields/AVM_C3_Square_Feet__c.field-meta.xml
<CustomField>
    <fullName>AVM_C3_Square_Feet__c</fullName>
    <label>AVM C3 Square Feet</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>