force-app/main/default/objects/Property_AVM__c/fields/AVM_C3_Target_Distance__c.field-meta.xml
<CustomField>
    <fullName>AVM_C3_Target_Distance__c</fullName>
    <label>AVM C3 Target Distance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>