force-app/main/default/objects/Property_AVM__c/fields/AVM_C3_Tot_Dom__c.field-meta.xml
<CustomField>
    <fullName>AVM_C3_Tot_Dom__c</fullName>
    <label>AVM C3 Tot Dom</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>