force-app/main/default/objects/Property_AVM__c/fields/AVM_Calculated_Price__c.field-meta.xml
<CustomField>
    <fullName>AVM_Calculated_Price__c</fullName>
    <label>AVM Calculated Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>