force-app/main/default/objects/Property_AVM__c/fields/AVM_City__c.field-meta.xml
<CustomField>
    <fullName>AVM_City__c</fullName>
    <label>AVM City</label>
    <length>255</length>
    <type>Text</type>
</CustomField>