force-app/main/default/objects/Property_AVM__c/fields/avm_confidence__c.field-meta.xml
<CustomField>
    <fullName>avm_confidence__c</fullName>
    <description>avm_confidence</description>
    <inlineHelpText>avm_confidence</inlineHelpText>
    <label>AVM Confidence</label>
    <length>10</length>
    <type>Text</type>
</CustomField>