force-app/main/default/objects/Property_AVM__c/fields/AVM_estimated_value__c.field-meta.xml
<CustomField>
    <fullName>AVM_estimated_value__c</fullName>
    <description>The value passed in the request as estimated_value</description>
    <label>AVM estimated value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>