force-app/main/default/objects/Property_AVM__c/fields/AVM_Is_HOA__c.field-meta.xml
<CustomField>
    <fullName>AVM_Is_HOA__c</fullName>
    <label>AVM Is HOA</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>