force-app/main/default/objects/Property_AVM__c/fields/AVM_Last_Sale_Date__c.field-meta.xml
<CustomField>
    <fullName>AVM_Last_Sale_Date__c</fullName>
    <label>AVM Last Sale Date</label>
    <type>Date</type>
</CustomField>