force-app/main/default/objects/Property_AVM__c/fields/AVM_Last_Sale_Price__c.field-meta.xml
<CustomField>
    <fullName>AVM_Last_Sale_Price__c</fullName>
    <label>AVM Last Sale Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>