force-app/main/default/objects/Property_AVM__c/fields/AVM_Loan_Number__c.field-meta.xml
<CustomField>
    <fullName>AVM_Loan_Number__c</fullName>
    <label>AVM Loan Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>