force-app/main/default/objects/Property_AVM__c/fields/AVM_number_of_comps__c.field-meta.xml
<CustomField>
    <fullName>AVM_number_of_comps__c</fullName>
    <description>Number of high similarity comparable properties included in the analysis</description>
    <label>AVM number of comps</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>