force-app/main/default/objects/Property_AVM__c/fields/AVM_Price_at_time_of_Purchase__c.field-meta.xml
<CustomField>
    <fullName>AVM_Price_at_time_of_Purchase__c</fullName>
    <label>AVM Price at time of Purchase</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>