force-app/main/default/objects/Property_AVM__c/fields/AVM_Property_Type__c.field-meta.xml
<CustomField>
    <fullName>AVM_Property_Type__c</fullName>
    <label>AVM Property Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>