force-app/main/default/objects/Property_AVM__c/fields/AVM_Provider__c.field-meta.xml
<CustomField>
    <fullName>AVM_Provider__c</fullName>
    <description>The Vendor that provided this Property AVM</description>
    <inlineHelpText>The Vendor that provided this Property AVM</inlineHelpText>
    <label>AVM Provider</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Red Bell</fullName>
            </value>
            <value>
                <fullName>Beekin</fullName>
            </value>
            <value>
                <fullName>HouseCanary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>