force-app/main/default/objects/Property_AVM__c/fields/AVM_State__c.field-meta.xml
<CustomField>
    <fullName>AVM_State__c</fullName>
    <label>AVM State</label>
    <length>20</length>
    <type>Text</type>
</CustomField>