force-app/main/default/objects/Property_AVM__c/fields/AVM_Sync__c.field-meta.xml
<CustomField>
    <fullName>AVM_Sync__c</fullName>
    <formula>AVM_Address__c  &lt;&gt; null</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AVM Sync</label>
    <type>Checkbox</type>
</CustomField>