force-app/main/default/objects/Property_AVM__c/fields/avm_value_sqft__c.field-meta.xml
<CustomField>
    <fullName>avm_value_sqft__c</fullName>
    <description>avm value per sqft from the house cannary API</description>
    <label>AVM value sqft</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>