force-app/main/default/objects/Property_AVM__c/fields/AVM_ZIP__c.field-meta.xml
<CustomField>
    <fullName>AVM_ZIP__c</fullName>
    <label>AVM ZIP</label>
    <length>20</length>
    <type>Text</type>
</CustomField>