force-app/main/default/objects/Property_AVM__c/fields/basement__c.field-meta.xml
<CustomField>
    <fullName>basement__c</fullName>
    <description>Description of basement. One of [Basement (not specified), Daylight, Full, Daylight, Partial, Full Basement, Improved Basement (Finished), No Basement, Partial Basement, Unfinished Basement]</description>
    <inlineHelpText>Description of basement. One of [Basement (not specified), Daylight, Full, Daylight, Partial, Full Basement, Improved Basement (Finished), No Basement, Partial Basement, Unfinished Basement]</inlineHelpText>
    <label>Basement</label>
    <length>30</length>
    <type>Text</type>
</CustomField>