force-app/main/default/objects/Property_AVM__c/fields/Block_Crime_Data_Present__c.field-meta.xml
<CustomField>
    <fullName>Block_Crime_Data_Present__c</fullName>
    <defaultValue>false</defaultValue>
    <description>House Canary Block crime Data Present</description>
    <label>Block Crime Data Present</label>
    <type>Checkbox</type>
</CustomField>