force-app/main/default/objects/Property_AVM__c/fields/building_area_sq_ft__c.field-meta.xml
<CustomField>
    <fullName>building_area_sq_ft__c</fullName>
    <description>Area of building(s) in square feet</description>
    <inlineHelpText>Area of building(s) in square feet</inlineHelpText>
    <label>Building area sq ft</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>