force-app/main/default/objects/Property_AVM__c/fields/building_condition_score__c.field-meta.xml
<CustomField>
    <fullName>building_condition_score__c</fullName>
    <description>Possible building condition score. Values range from 1 to 5. 5 = Excellent, 4 = Good, 3 = Fair, 2 = Poor, 1 = Unsound</description>
    <inlineHelpText>Possible building condition score. Values range from 1 to 5. 5 = Excellent, 4 = Good, 3 = Fair, 2 = Poor, 1 = Unsound</inlineHelpText>
    <label>Building condition score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>