force-app/main/default/objects/Property_AVM__c/fields/building_quality_score__c.field-meta.xml
<CustomField>
    <fullName>building_quality_score__c</fullName>
    <description>Possible building quality score. Values range from 1 to 5. 5 = A grade, 4 = B grade, 3 = C grade, 2 = D grade, 1 = E grade</description>
    <inlineHelpText>Possible building quality score. Values range from 1 to 5. 5 = A grade, 4 = B grade, 3 = C grade, 2 = D grade, 1 = E grade</inlineHelpText>
    <label>Building quality score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>