force-app/main/default/objects/Property_AVM__c/fields/construction_type__c.field-meta.xml
<CustomField>
    <fullName>construction_type__c</fullName>
    <description>Primary construction material. One of [Adobe, Brick, Concrete, Concrete Block, Dome, Frame, Heavy, Light, Log, Manufactured, Other, Masonry, Metal, Steel, Stone, Tilt-up (pre-cast concrete), Wood, Mixed]</description>
    <inlineHelpText>Primary construction material. One of [Adobe, Brick, Concrete, Concrete Block, Dome, Frame, Heavy, Light, Log, Manufactured, Other, Masonry, Metal, Steel, Stone, Tilt-up (pre-cast concrete), Wood, Mixed]</inlineHelpText>
    <label>Construction type</label>
    <length>30</length>
    <type>Text</type>
</CustomField>