force-app/main/default/objects/Property_AVM__c/fields/effective_date__c.field-meta.xml
<CustomField>
    <fullName>effective_date__c</fullName>
    <description>Date the flood risk assessment took effect</description>
    <inlineHelpText>Date the flood risk assessment took effect</inlineHelpText>
    <label>Flood effective date</label>
    <type>Date</type>
</CustomField>