force-app/main/default/objects/Property_AVM__c/fields/Estimated_Min_Rent__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Min_Rent__c</fullName>
    <description>Estimated Min Rent Retrieved from Beekin API</description>
    <label>Estimated Min Rent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>