force-app/main/default/objects/Property_AVM__c/fields/Estimated_Rent__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Rent__c</fullName>
    <description>Estimated Rent Retrieved from Beekin API</description>
    <label>Estimated Rent</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>