force-app/main/default/objects/Property_AVM__c/fields/exterior_walls__c.field-meta.xml
<CustomField>
    <fullName>exterior_walls__c</fullName>
    <description>Type of exterior walls. One of [Adobe, Asbestos shingle, Block, Brick, Brick veneer, Combination, Composition, Concrete, Concrete Block, Glass, Log, Marble, Masonry, Metal, Other, Rock, Stone, Shingle (Not Wood), Siding (Alum/Vinyl), Stucco, Tile, Tilt-up (pre-cast concrete), Wood, Wood Shingle, Wood Siding]</description>
    <inlineHelpText>Type of exterior walls. One of [Adobe, Asbestos shingle, Block, Brick, Brick veneer, Combination, Composition, Concrete, Concrete Block, Glass, Log, Marble, Masonry, Metal, Other, Rock, Stone, Shingle (Not Wood), Siding (Alum/Vinyl), Stucco, Tile, Tilt-up (pre-cast concrete), Wood, Wood Shingle, Wood Siding]</inlineHelpText>
    <label>Exterior walls</label>
    <length>40</length>
    <type>Text</type>
</CustomField>